<resources>
    <string name="app_name">CoolWeather</string>
    <string name="country">国别</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="district">区县</string>
    <string name="street">街道</string>
    <string name="latlng">坐标</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addcity">添加关注城市</string>
    <string name="back">返回</string>
    <string name="forecast">预报</string>
    <string name="aqi">空气质量</string>
    <string name="aq">AQI指数</string>
    <string name="pm25">PM2.5指数</string>
    <string name="suggestion">生活建议</string>
    <string name="showweather">显示天气信息</string>
</resources>
