<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.lygtc.coolweather.MainActivity">

    <TextView
        android:text="@string/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/streetView"
        android:textSize="24sp"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/districtView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/countryView"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:id="@+id/cityView"
        android:textSize="24sp"
        android:layout_below="@+id/countryView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/provinceView"
        android:textSize="24sp"
        android:layout_below="@+id/countryView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/districtView"
        android:textSize="24sp"
        android:layout_below="@+id/cityView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <TextView
        android:text="@string/latlng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/latlngView"
        android:textSize="24sp"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/streetView"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/addcity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/addCountyButton"
        android:textSize="18sp" />

    <Button
        android:id="@+id/showWeatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/showweather" />
</RelativeLayout>
